Final version of WeatherPy completed and readme updated

--- a/code/WeatherPy_Work.ipynb
+++ b/code/WeatherPy_Work.ipynb
@@ -20940,7 +20940,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Latitude vs. Wind Speed Plot also does not show a meaningfull correlation regarding proximity to the equator.  It does however show that the majority of cities in this set have lower windspeeds with the majority all clustering between 0 and 15 mph."
+    "The Latitude vs. Wind Speed Plot does somewhat show that for some cities moving away from the equator means a higher wind speed.  It does however show that the majority of cities in this set have lower windspeeds regardless of proximity to the equator with the majority all clustering between 0 and 15 mph."
    ]
   },
   {
@@ -21382,7 +21382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21395,7 +21395,16 @@
     "    regress_values = x_vals * slope + intercept\n",
     "    line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
     "    print(f\"The r-value is: {rvalue}\")\n",
-    "    return regress_values, line_eq"
+    "    return regress_values, line_eq\n",
+    "\n",
+    "def generateScatterPlot(x_vals, y_vals, regress_values, x_annotate, y_annotate, title, xlabel, ylabel, file_path):\n",
+    "    plt.scatter(x_vals, y_vals)\n",
+    "    plt.plot(x_vals,regress_values,\"r-\")\n",
+    "    plt.annotate(ln_eq,(x_annotate,y_annotate),fontsize=15,color=\"red\")\n",
+    "    plt.title(title)\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.xlabel(xlabel)\n",
+    "    plt.savefig(file_path)"
    ]
   },
   {
@@ -21407,7 +21416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -21416,16 +21425,6 @@
      "text": [
       "The r-value is: -0.8220145940507662\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 0, 'Latitude')"
-      ]
-     },
-     "execution_count": 179,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -21448,12 +21447,25 @@
     "\n",
     "reg_vals, ln_eq = calcLinregress(northern_city_weather_df[\"Lat\"], northern_city_weather_df[\"Max Temp\"])\n",
     "\n",
-    "plt.scatter(northern_city_weather_df[\"Lat\"], northern_city_weather_df[\"Max Temp\"])\n",
-    "plt.plot(northern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
-    "plt.annotate(ln_eq,(5,30),fontsize=15,color=\"red\")\n",
-    "plt.title(f\"Northern City Latitude vs. Max Temperature ({today.strftime('%m/%d/%y')})\")\n",
-    "plt.ylabel(\"Max Temperature (F)\")\n",
-    "plt.xlabel(\"Latitude\")"
+    "#plt.scatter(northern_city_weather_df[\"Lat\"], northern_city_weather_df[\"Max Temp\"])\n",
+    "#plt.plot(northern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
+    "#plt.annotate(ln_eq,(5,30),fontsize=15,color=\"red\")\n",
+    "#plt.title(f\"Northern City Latitude vs. Max Temperature ({today.strftime('%m/%d/%y')})\")\n",
+    "#plt.ylabel(\"Max Temperature (F)\")\n",
+    "#plt.xlabel(\"Latitude\")\n",
+    "#plt.savefig(f\"{output_data_loc}/Max_Temp_vs_Lat_LinearRegression_NH.png\")\n",
+    "\n",
+    "generateScatterPlot(\n",
+    "    northern_city_weather_df[\"Lat\"],\n",
+    "    northern_city_weather_df[\"Max Temp\"],\n",
+    "    reg_vals,\n",
+    "    5,\n",
+    "    30,\n",
+    "    f\"Northern City Latitude vs. Max Temperature ({today.strftime('%m/%d/%y')})\",\n",
+    "    \"Latitude\",\n",
+    "    \"Max Temperature (F)\",\n",
+    "    f\"{output_data_loc}/Max_Temp_vs_Lat_LinearRegression_NH.png\"\n",
+    ")"
    ]
   },
   {
@@ -21465,7 +21477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -21474,16 +21486,6 @@
      "text": [
       "The r-value is: 0.7479765771089546\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 0, 'Latitude')"
-      ]
-     },
-     "execution_count": 180,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -21506,19 +21508,33 @@
     "\n",
     "reg_vals, ln_eq = calcLinregress(southern_city_weather_df[\"Lat\"], southern_city_weather_df[\"Max Temp\"])\n",
     "\n",
-    "plt.scatter(southern_city_weather_df[\"Lat\"], southern_city_weather_df[\"Max Temp\"])\n",
-    "plt.plot(southern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
-    "plt.annotate(ln_eq,(-55,85),fontsize=15,color=\"red\")\n",
-    "plt.title(f\"Southern City Latitude vs. Max Temperature ({today.strftime('%m/%d/%y')})\")\n",
-    "plt.ylabel(\"Max Temperature (F)\")\n",
-    "plt.xlabel(\"Latitude\")"
+    "#plt.scatter(southern_city_weather_df[\"Lat\"], southern_city_weather_df[\"Max Temp\"])\n",
+    "#plt.plot(southern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
+    "#plt.annotate(ln_eq,(-55,85),fontsize=15,color=\"red\")\n",
+    "#plt.title(f\"Southern City Latitude vs. Max Temperature ({today.strftime('%m/%d/%y')})\")\n",
+    "#plt.ylabel(\"Max Temperature (F)\")\n",
+    "#plt.xlabel(\"Latitude\")\n",
+    "##plt.gca().invert_xaxis()\n",
+    "#plt.savefig(f\"{output_data_loc}/Max_Temp_vs_Lat_LinearRegression_SH.png\")\n",
+    "\n",
+    "generateScatterPlot(\n",
+    "    southern_city_weather_df[\"Lat\"],\n",
+    "    southern_city_weather_df[\"Max Temp\"],\n",
+    "    reg_vals,\n",
+    "    -55,\n",
+    "    85,\n",
+    "    f\"Southern City Latitude vs. Max Temperature ({today.strftime('%m/%d/%y')})\",\n",
+    "    \"Latitude\",\n",
+    "    \"Max Temperature (F)\",\n",
+    "    f\"{output_data_loc}/Max_Temp_vs_Lat_LinearRegression_SH.png\"\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Max Temp vs. Latitude Linear Regression - these 2 plots show the same relationship between latitude and temperature in an inverted manner.  As you get closer to the equator, the temperature rises. There is a strong positive correlation based on the r value approaching 1. "
+    "Max Temp vs. Latitude Linear Regression - these 2 plots show the same relationship between latitude and temperature in an inverted manner forming a peak at the equator.  As you get closer to the equator, the temperature rises. There is a strong positive correlation based on the r value approaching 1. "
    ]
   },
   {
@@ -21530,7 +21546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -21539,16 +21555,6 @@
      "text": [
       "The r-value is: 0.0708871575614301\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 0, 'Latitude')"
-      ]
-     },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -21571,12 +21577,25 @@
     "\n",
     "reg_vals, ln_eq = calcLinregress(northern_city_weather_df[\"Lat\"], northern_city_weather_df[\"Humidity\"])\n",
     "\n",
-    "plt.scatter(northern_city_weather_df[\"Lat\"], northern_city_weather_df[\"Humidity\"])\n",
-    "plt.plot(northern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
-    "plt.annotate(ln_eq,(45,10),fontsize=15,color=\"red\")\n",
-    "plt.title(f\"Northern City Latitude vs.Humidity ({today.strftime('%m/%d/%y')})\")\n",
-    "plt.ylabel(\"Humidity (%)\")\n",
-    "plt.xlabel(\"Latitude\")"
+    "#plt.scatter(northern_city_weather_df[\"Lat\"], northern_city_weather_df[\"Humidity\"])\n",
+    "#plt.plot(northern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
+    "#plt.annotate(ln_eq,(45,10),fontsize=15,color=\"red\")\n",
+    "#plt.title(f\"Northern City Latitude vs.Humidity ({today.strftime('%m/%d/%y')})\")\n",
+    "#plt.ylabel(\"Humidity (%)\")\n",
+    "#plt.xlabel(\"Latitude\")\n",
+    "#plt.savefig(f\"{output_data_loc}/Humidity_vs_Lat_LinearRegression_NH.png\")\n",
+    "\n",
+    "generateScatterPlot(\n",
+    "    northern_city_weather_df[\"Lat\"],\n",
+    "    northern_city_weather_df[\"Humidity\"],\n",
+    "    reg_vals,\n",
+    "    45,\n",
+    "    10,\n",
+    "    f\"Northern City Latitude vs.Humidity ({today.strftime('%m/%d/%y')})\",\n",
+    "    \"Latitude\",\n",
+    "    \"Humidity (%)\",\n",
+    "    f\"{output_data_loc}/Humidity_vs_Lat_LinearRegression_NH.png\"\n",
+    ")"
    ]
   },
   {
@@ -21588,7 +21607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -21597,16 +21616,6 @@
      "text": [
       "The r-value is: 0.19916413283126674\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 0, 'Latitude')"
-      ]
-     },
-     "execution_count": 183,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -21629,12 +21638,33 @@
     "\n",
     "reg_vals, ln_eq = calcLinregress(southern_city_weather_df[\"Lat\"], southern_city_weather_df[\"Humidity\"])\n",
     "\n",
-    "plt.scatter(southern_city_weather_df[\"Lat\"], southern_city_weather_df[\"Humidity\"])\n",
-    "plt.plot(southern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
-    "plt.annotate(ln_eq,(-55,10),fontsize=15,color=\"red\")\n",
-    "plt.title(f\"Southern City Latitude vs. Humidity ({today.strftime('%m/%d/%y')})\")\n",
-    "plt.ylabel(\"Humidity (%)\")\n",
-    "plt.xlabel(\"Latitude\")"
+    "#plt.scatter(southern_city_weather_df[\"Lat\"], southern_city_weather_df[\"Humidity\"])\n",
+    "#plt.plot(southern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
+    "#plt.annotate(ln_eq,(-55,10),fontsize=15,color=\"red\")\n",
+    "#plt.title(f\"Southern City Latitude vs. Humidity ({today.strftime('%m/%d/%y')})\")\n",
+    "#plt.ylabel(\"Humidity (%)\")\n",
+    "#plt.xlabel(\"Latitude\")\n",
+    "##plt.gca().invert_xaxis()\n",
+    "#plt.savefig(f\"{output_data_loc}/Humidity_vs_Lat_LinearRegression_SH.png\")\n",
+    "\n",
+    "generateScatterPlot(\n",
+    "    southern_city_weather_df[\"Lat\"],\n",
+    "    southern_city_weather_df[\"Humidity\"],\n",
+    "    reg_vals,\n",
+    "    -55,\n",
+    "    10,\n",
+    "    f\"Southern City Latitude vs. Humidity ({today.strftime('%m/%d/%y')})\",\n",
+    "    \"Latitude\",\n",
+    "    \"Humidity (%)\",\n",
+    "    f\"{output_data_loc}/Humidity_vs_Lat_LinearRegression_SH.png\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Humidity (%) vs. Latitude Linear Regression - These plots show that humidity slightly rises as you go north of the equator and drops as you go south of the equator."
    ]
   },
   {
@@ -21646,7 +21676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -21655,16 +21685,6 @@
      "text": [
       "The r-value is: 0.09708767043503881\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 0, 'Latitude')"
-      ]
-     },
-     "execution_count": 184,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -21687,12 +21707,25 @@
     "\n",
     "reg_vals, ln_eq = calcLinregress(northern_city_weather_df[\"Lat\"], northern_city_weather_df[\"Cloudiness\"])\n",
     "\n",
-    "plt.scatter(northern_city_weather_df[\"Lat\"], northern_city_weather_df[\"Cloudiness\"])\n",
-    "plt.plot(northern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
-    "plt.annotate(ln_eq,(25,30),fontsize=15,color=\"red\")\n",
-    "plt.title(f\"Northern City Latitude vs. Cloudiness ({today.strftime('%m/%d/%y')})\")\n",
-    "plt.ylabel(\"Cloudiness (%)\")\n",
-    "plt.xlabel(\"Latitude\")"
+    "#plt.scatter(northern_city_weather_df[\"Lat\"], northern_city_weather_df[\"Cloudiness\"])\n",
+    "#plt.plot(northern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
+    "#plt.annotate(ln_eq,(25,30),fontsize=15,color=\"red\")\n",
+    "#plt.title(f\"Northern City Latitude vs. Cloudiness ({today.strftime('%m/%d/%y')})\")\n",
+    "#plt.ylabel(\"Cloudiness (%)\")\n",
+    "#plt.xlabel(\"Latitude\")\n",
+    "#plt.savefig(f\"{output_data_loc}/Cloudiness_vs_Lat_LinearRegression_NH.png\")\n",
+    "\n",
+    "generateScatterPlot(\n",
+    "    northern_city_weather_df[\"Lat\"],\n",
+    "    northern_city_weather_df[\"Cloudiness\"],\n",
+    "    reg_vals,\n",
+    "    25,\n",
+    "    30,\n",
+    "    f\"Northern City Latitude vs. Cloudiness ({today.strftime('%m/%d/%y')})\",\n",
+    "    \"Latitude\",\n",
+    "    \"Cloudiness (%)\",\n",
+    "    f\"{output_data_loc}/Cloudiness_vs_Lat_LinearRegression_NH.png\"\n",
+    ")"
    ]
   },
   {
@@ -21704,7 +21737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -21713,16 +21746,6 @@
      "text": [
       "The r-value is: 0.21494022458775028\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 0, 'Latitude')"
-      ]
-     },
-     "execution_count": 185,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -21745,12 +21768,33 @@
     "\n",
     "reg_vals, ln_eq = calcLinregress(southern_city_weather_df[\"Lat\"], southern_city_weather_df[\"Cloudiness\"])\n",
     "\n",
-    "plt.scatter(southern_city_weather_df[\"Lat\"], southern_city_weather_df[\"Cloudiness\"])\n",
-    "plt.plot(southern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
-    "plt.annotate(ln_eq,(-55,60),fontsize=15,color=\"red\")\n",
-    "plt.title(f\"Southern City Latitude vs. Cloudiness ({today.strftime('%m/%d/%y')})\")\n",
-    "plt.ylabel(\"Cloudiness (%)\")\n",
-    "plt.xlabel(\"Latitude\")"
+    "#plt.scatter(southern_city_weather_df[\"Lat\"], southern_city_weather_df[\"Cloudiness\"])\n",
+    "#plt.plot(southern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
+    "#plt.annotate(ln_eq,(-55,60),fontsize=15,color=\"red\")\n",
+    "#plt.title(f\"Southern City Latitude vs. Cloudiness ({today.strftime('%m/%d/%y')})\")\n",
+    "#plt.ylabel(\"Cloudiness (%)\")\n",
+    "#plt.xlabel(\"Latitude\")\n",
+    "#plt.savefig(f\"{output_data_loc}/Cloudiness_vs_Lat_LinearRegression_SH.png\")\n",
+    "\n",
+    "generateScatterPlot(\n",
+    "    southern_city_weather_df[\"Lat\"],\n",
+    "    southern_city_weather_df[\"Cloudiness\"],\n",
+    "    reg_vals,\n",
+    "    -55,\n",
+    "    60,\n",
+    "    f\"Southern City Latitude vs. Cloudiness ({today.strftime('%m/%d/%y')})\",\n",
+    "    \"Latitude\",\n",
+    "    \"Cloudiness (%)\",\n",
+    "    f\"{output_data_loc}/Cloudiness_vs_Lat_LinearRegression_SH.png\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cloudiness (%) vs. Latitude Linear Regression - These 2 plots show that Cloudiness appears to similarily \n",
+    "follow the regression path humidity does as it rises as you go north and drops as you go south, although the drop in cloudiness as you go south is more pronounced compaired to humidity."
    ]
   },
   {
@@ -21762,7 +21806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -21771,16 +21815,6 @@
      "text": [
       "The r-value is: 0.21639753864451258\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 0, 'Latitude')"
-      ]
-     },
-     "execution_count": 186,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -21803,12 +21837,25 @@
     "\n",
     "reg_vals, ln_eq = calcLinregress(northern_city_weather_df[\"Lat\"], northern_city_weather_df[\"Wind Speed\"])\n",
     "\n",
-    "plt.scatter(northern_city_weather_df[\"Lat\"], northern_city_weather_df[\"Wind Speed\"])\n",
-    "plt.plot(northern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
-    "plt.annotate(ln_eq,(25,27),fontsize=15,color=\"red\")\n",
-    "plt.title(f\"Northern City Latitude vs. Wind Speed ({today.strftime('%m/%d/%y')})\")\n",
-    "plt.ylabel(\"Wind Speed (mph)\")\n",
-    "plt.xlabel(\"Latitude\")"
+    "#plt.scatter(northern_city_weather_df[\"Lat\"], northern_city_weather_df[\"Wind Speed\"])\n",
+    "#plt.plot(northern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
+    "#plt.annotate(ln_eq,(25,27),fontsize=15,color=\"red\")\n",
+    "#plt.title(f\"Northern City Latitude vs. Wind Speed ({today.strftime('%m/%d/%y')})\")\n",
+    "#plt.ylabel(\"Wind Speed (mph)\")\n",
+    "#plt.xlabel(\"Latitude\")\n",
+    "#plt.savefig(f\"{output_data_loc}/WindSpeed_vs_Lat_LinearRegression_NH.png\")\n",
+    "\n",
+    "generateScatterPlot(\n",
+    "    northern_city_weather_df[\"Lat\"],\n",
+    "    northern_city_weather_df[\"Wind Speed\"],\n",
+    "    reg_vals,\n",
+    "    25,\n",
+    "    27,\n",
+    "    f\"Northern City Latitude vs. Wind Speed ({today.strftime('%m/%d/%y')})\",\n",
+    "    \"Latitude\",\n",
+    "    \"Wind Speed (mph)\",\n",
+    "    f\"{output_data_loc}/WindSpeed_vs_Lat_LinearRegression_NH.png\"\n",
+    ")"
    ]
   },
   {
@@ -21820,7 +21867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -21829,16 +21876,6 @@
      "text": [
       "The r-value is: -0.12023529642397761\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 0, 'Latitude')"
-      ]
-     },
-     "execution_count": 187,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -21861,12 +21898,32 @@
     "\n",
     "reg_vals, ln_eq = calcLinregress(southern_city_weather_df[\"Lat\"], southern_city_weather_df[\"Wind Speed\"])\n",
     "\n",
-    "plt.scatter(southern_city_weather_df[\"Lat\"], southern_city_weather_df[\"Wind Speed\"])\n",
-    "plt.plot(southern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
-    "plt.annotate(ln_eq,(-50,18),fontsize=15,color=\"red\")\n",
-    "plt.title(f\"Southern City Latitude vs. Wind Speed ({today.strftime('%m/%d/%y')})\")\n",
-    "plt.ylabel(\"Wind Speed (mph)\")\n",
-    "plt.xlabel(\"Latitude\")"
+    "#plt.scatter(southern_city_weather_df[\"Lat\"], southern_city_weather_df[\"Wind Speed\"])\n",
+    "#plt.plot(southern_city_weather_df[\"Lat\"],reg_vals,\"r-\")\n",
+    "#plt.annotate(ln_eq,(-50,18),fontsize=15,color=\"red\")\n",
+    "#plt.title(f\"Southern City Latitude vs. Wind Speed ({today.strftime('%m/%d/%y')})\")\n",
+    "#plt.ylabel(\"Wind Speed (mph)\")\n",
+    "#plt.xlabel(\"Latitude\")\n",
+    "#plt.savefig(f\"{output_data_loc}/WindSpeed_vs_Lat_LinearRegression_SH.png\")\n",
+    "\n",
+    "generateScatterPlot(\n",
+    "    southern_city_weather_df[\"Lat\"],\n",
+    "    southern_city_weather_df[\"Wind Speed\"],\n",
+    "    reg_vals,\n",
+    "    -50,\n",
+    "    18,\n",
+    "    f\"Southern City Latitude vs. Wind Speed ({today.strftime('%m/%d/%y')})\",\n",
+    "    \"Latitude\",\n",
+    "    \"Wind Speed (mph)\",\n",
+    "    f\"{output_data_loc}/WindSpeed_vs_Lat_LinearRegression_SH.png\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wind Speed (mph) vs. Latitude Linear Regression - These 2 plots show that wind speed increases as you move away from the equator either going north or south."
    ]
   },
   {
