--- a/code/VacationPy_Work.ipynb
+++ b/code/VacationPy_Work.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# VacationPy\n",
+    "# VacationPy - WORK FILE! :: Use VacationPy.ipynb for marking\n",
     "----\n",
     "\n",
     "#### Note\n",
@@ -159,9 +159,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pydev",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "pydev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.11"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
